examples/misc/error/compilation/eval_wdt_array.bfr
let main = [
  $build {
    a: array(_) { x;  i: index; }
  }
  > a@i@i
]